[project]
name = "quantitative-trading-strategies-using-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SmeeBoi", email = "sameer.desai.boston@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "numpy>=2.0.1",
    "yfinance>=0.2.41",
    "plotly>=5.23.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/quantitative_trading_strategies_using_python"]
